--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -36,7 +36,7 @@
         "socialCommunication": "Social Communication refers to language that is used in social situations. This refers to a child's ability to use language to interact with others in a variety of situations.",
         "valuableIdeas": "Everyone is looking for valuable ideas. Those ideas that have the power to change the way you think, act or see the world.",
         "experiences": "DescriptionExperience is the process through which conscious organisms perceive the world around them.",
-        "friendlyCommunity": "Enables people from all conflict-effected countris to actively participate in community activities and treats everyone with respect, regardless of their nationalities or ethnicities."
+        "friendlyCommunity": "Enables people from all conflict-affected countries to actively participate in community activities and treats everyone with respect, regardless of their nationalities or ethnicities."
       }
     },
     "testimonials": {
@@ -49,11 +49,15 @@
         "text": "We hope that the REACH Health App is an impactful digital solution for the youth to access health care facilities",
         "whoSay": "Imad Hteit",
         "position": "Poject Manager"
+      },
+      "global-texts": {
+        "testimonial-title": "Testimonials",
+        "partners-title": "Our Partners"
       }
     },
     "stories-section": {
       "title": "Latest Stories",
-      "subtitle": "Discover the newest article written by an experinced refugees, take advantages of it or share your feedback with them.",
+      "subtitle": "Discover the newest articles written by an experinced refugees, take advantages of it or share your feedback with them.",
       "cat-label": {
         "language": "Language",
         "jobs": "Jobs"
@@ -236,7 +240,7 @@
     "description": "Contact Refuebook project",
 
     "heading": "Get In Touch",
-    "paragraph": "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit harum mollitia.",
+    "paragraph": "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit harum mollitia. amet consectetur adipisicing elit ipsum dolor sit.",
 
     "formLabels": {
       "name": "Name:",
